--- a/video_mocap.yml
+++ b/video_mocap.yml
@@ -1,7 +1,7 @@
 
 detector:
   det_config: "ckpts/yolov7/yolov7-tiny.yaml"
-  det_checkpoint: "ckpts/yolov7/yolov7-tiny.pt"
+  det_checkpoint: "xxx"
 segmentation:
   seg_checkpoint: "ckpts/yolov7/yolov7-tiny.pt"
 
