--- a/video_mocap.yml
+++ b/video_mocap.yml
@@ -5,6 +5,12 @@ detector:
 segmentation:
   seg_checkpoint: "ckpts/yolov7/yolov7-tiny.pt"
 
+depth:
+  ckpt: "ckpt/cenet/lastest.pth"
+  model: "cfnet"
+  maxdisp: 192
+
+
 retrieval:
   retrieval_checkpoint: "ckpts/retrieval/Food1k_deit_pre_arcface.pth.tar"
   input_shape: 256
