--- a/video_mocap.yml
+++ b/video_mocap.yml
@@ -3,7 +3,7 @@ detector:
   det_config: "ckpts/yolov7/yolov7-w6.yaml"
   det_checkpoint: "ckpts/yolov7/yolov7-w6.pt"
 segmentation:
-  seg_checkpoint: "**"
+  seg_checkpoint: "ckpts/sam/sam_b.pt"
 
 depth:
   ckpt: "ckpt/cenet/lastest.pth"
