--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,28 @@ __pycache__/
 */*/*/*/__pycache__/
 */*/*/*/*/__pycache__/
 */*/*/*/*/*/__pycache__/
+__pycache__/
+*/__pycache__/
+*/*/__pycache__/
+*/*/*/__pycache__/
+*/*/*/*/__pycache__/
+*/*/*/*/*/__pycache__/
+*/*/*/*/*/*/__pycache__/
+ckpts/
+*.pt
+*.jpg
+*/*.jpg
+*/*/*.jpg
+*/*/*/*.jpg
+*/*/*/*/*.jpg
+*/*/*/*/*/*.jpg
+*/*/*/*/*/*/*.jpg
+*.pyc
+*/*.pyc
+*/*/*.pyc
+*/*/*/*.pyc
+*/*/*/*/*.pyc
+*/*/*/*/*/*.pyc
+*/*/*/*/*/*/*.pyc
 ckpts/
 *.pt
